# heisttown

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile_Win  README.md  appveyor.yml  heisttown.files  sanitizer_suppressions.supp  suppressions.supp
app/: CMakeLists.txt
app/client/mousecursor/: CMakeLists.txt  mousecursor.hpp
app/unittests/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  DisabledAllKeyEvents.hpp  main.cpp
src/Assets/Menus/: SinglePlayer.txt
src/Client/: CMakeLists.txt  Client.hpp  LocalClient.cpp  LocalClient.hpp  MockClient.hpp
src/Client/FilesStorage/: CMakeLists.txt  FileLoader.h  FilesStorage.cpp  FilesStorage.h  IFileLoader.h  StubFileLoader.h
src/Client/MouseCursor/: CMakeLists.txt  MouseCursor.cpp  MouseCursor.h  MouseCursor.hpp  mousecursor.cpp
src/Client/Tests/: CMakeLists.txt  LocalClientTests.cpp
src/Display/: CMakeLists.txt  Display.hpp  Displayable.hpp  MockDisplay.hpp
src/Display/QtDisplay/: CMakeLists.txt  QtDisplay.cpp  QtDisplay.hpp
src/FilesStorage/: CMakeLists.txt  FileLoader.h  FileLoader.hpp  FilesStorage.cpp  FilesStorage.hpp  IFileLoader.hpp  MockFileLoader.hpp  StubFileLoader.hpp  TextFile.cpp  TextFile.h  TextFile.hpp
src/FilesStorage/Tests/: CMakeLists.txt  FileLoaderTests.cpp  FilesStorageTests.cpp  TestFileTests.cpp
src/GameDisplay/: CMakeLists.txt  GameDisplay.hpp  MockGameDisplay.hpp
src/GameDisplay/QtGameDisplay/: CMakeLists.txt  QtGameDisplay.cpp  QtGameDisplay.hpp
src/Gameplay/: CMakeLists.txt  GameConnection.hpp  GameObject.hpp  GameObjectFactory.cpp  GameObjectFactory.hpp  GameScene.hpp  GameSceneUpdate.hpp  GameSession.cpp  GameSession.hpp  GameplayUpdate.hpp  MockGameObjectFactory.hpp  MockGameScene.hpp  MockGameSession.hpp
src/Gameplay/Tests/: CMakeLists.txt  GameObjectFactoryTests.cpp  GameSessionTests.cpp
src/Input/: CMakeLists.txt  Input.hpp  InputDispatcher.cpp  InputDispatcher.hpp  InputEvent.hpp  InputHandler.hpp  InputPlayerHandler.cpp  InputPlayerHandler.hpp  InputSource.hpp  MockInput.hpp  MockInputDispatcher.hpp  MockInputHandler.hpp  MockInputPlayerHandler.hpp  MockInputSource.hpp  PlayerStatus.hpp
src/Input/Tests/: CMakeLists.txt  InputDispatcherTests.cpp  InputPlayerHandlerTests.cpp
src/Keyboard/: CMakeLists.txt  Keyboard.hpp  MockKeyboard.hpp
src/MainApplication/: CMakeLists.txt  MainApplication.cpp  MainApplication.hpp
src/MainApplication/QtMainApplication/: CMakeLists.txt
src/MainApplication/Tests/: CMakeLists.txt  MainApplicationTests.cpp
src/MainControl/: CMakeLists.txt  MainControlConnector.hpp
src/Menu/: CMakeLists.txt  IMenuController.hpp  IMenuParser.h  IMenuParser.hpp  Menu.cpp  Menu.h  Menu.hpp  MenuController.cpp  MenuController.h  MenuController.hpp  MenuParser.cpp  MenuParser.h  MenuParser.hpp  Menus.h  Menus.hpp  MockMenuController.hpp
src/Menu/Tests/: CMakeLists.txt  MenuControllerTests.cpp  MenuParserTests.cpp  MenuTests.cpp  main.cpp
src/Menus/: MainMenu.txt  Pause.txt  Settings.txt  SinglePlayer.txt
src/MouseCursor/: CMakeLists.txt  MouseCursor.cpp  MouseCursor.hpp
src/MouseCursor/Tests/: CMakeLists.txt  MouseCursorTests.cpp
src/PlayerInput/: CMakeLists.txt  KeyboardMousePlayerInput.cpp  KeyboardMousePlayerInput.hpp  MockPlayerInput.hpp  PlayerInput.hpp  PlayerStatus.hpp
src/PlayerInput/QtKeyboardMousePlayerInput/: CMakeLists.txt  InputSourceProxy.cpp  InputSourceProxy.hpp  QtKeyboardMousePlayerInput.cpp  QtKeyboardMousePlayerInput.hpp
src/PlayerInput/Tests/: CMakeLists.txt  KeyboardMousePlayerInputTests.cpp
src/Rendering/: CMakeLists.txt  MockRenderItem.hpp  MockRenderSceneBuilder.hpp  MockRenderTarget.hpp  RenderItem.hpp  RenderSceneBuilder.hpp  RenderTarget.hpp
src/Scene/: CMakeLists.txt  MockScene.hpp  MockSceneItemFactory.hpp  Scene.hpp  SceneItem.hpp  SceneItemFactory.cpp  SceneItemFactory.hpp  SceneUpdate.hpp
src/Scene/Tests/: CMakeLists.txt  SceneItemFactoryTests.cpp
src/Server/: CMakeLists.txt  GameSession.cpp  GameSession.hpp  LocalServer.cpp  LocalServer.hpp  MockGameSession.hpp  MockServer.hpp  Server.hpp
src/Server/Tests/: CMakeLists.txt  LocalServerTests.cpp
src/Sfml/: ButtonWidget.cpp  ButtonWidget.hpp  CMakeLists.txt  DefaultWidgetImpl.cpp  DefaultWidgetImpl.hpp  DisplaySfml.cpp  DisplaySfml.hpp  Drawable.hpp  EventDispatcher.cpp  EventDispatcher.hpp  EventHandler.hpp  LabelWidget.hpp  MockDisplaySfml.hpp  MockSfmlWindow.hpp  MockSprite.hpp  MockSpriteFactory.hpp  Renderer.cpp  Renderer.hpp  SfmlWindow.cpp  SfmlWindow.hpp  Sprite.cpp  Sprite.hpp  SpriteFactory.cpp  SpriteFactory.hpp  TextureFile.cpp  TextureFile.hpp  WidgetsFactorySfml.cpp  WidgetsFactorySfml.hpp
src/Sfml/SfmlInput/: CMakeLists.txt  SfmlInputSource.cpp  SfmlInputSource.hpp
src/Sfml/SfmlRendering/: CMakeLists.txt  MockSfmlRenderItem.hpp  MockSfmlRenderItemFactory.hpp  SfmlRenderItem.cpp  SfmlRenderItem.hpp  SfmlRenderItemFactory.cpp  SfmlRenderItemFactory.hpp  SfmlRenderSceneBuilder.cpp  SfmlRenderSceneBuilder.hpp  SfmlRenderTarget.cpp  SfmlRenderTarget.hpp  SfmlTextureFile.cpp  SfmlTextureFile.hpp
src/Sfml/SfmlWidgets/: ButtonWidget.cpp  ButtonWidget.hpp  CMakeLists.txt  DefaultWidgetImpl.cpp  DefaultWidgetImpl.hpp  LabelWidget.cpp  LabelWidget.hpp  WidgetsFactorySfml.cpp  WidgetsFactorySfml.hpp
src/Sfml/Tests/: ButtonWidgetTests.cpp  CMakeLists.txt  DefaultWidgetImplTests.cpp  DisplaySfmlTests.cpp  SfmlWindowTests.cpp  SpriteFactoryTests.cpp  WidgetsFactorySfmlTests.cpp
src/Widgets/: .CMakeLists.txt.swp  CMakeLists.txt  ControlWidget.h  ControlWidget.hpp  DynamicWidget.h  MockControlWidget.h  MockControlWidget.hpp  MockDynamicWidget.h  MockWidget.h  MockWidget.hpp  MockWidgetWithControl.hpp  MockWidgetsFactory.h  MockWidgetsFactory.hpp  StubWidget.cpp  StubWidget.h  StubWidget.hpp  StubWidgetsFactory.h  StubWidgetsFactory.hpp  Widget.h  Widget.hpp  WidgetControl.hpp  WidgetGeometry.h  WidgetGeometry.hpp  WidgetType.h  WidgetType.hpp  WidgetsFactory.h  WidgetsFactory.hpp
src/Widgets/Qt/: Button.cpp  Button.h  Label.h  (+4 more)
src/client/: CMakeLists.txt
unittests/: CMakeLists.txt  main.cpp
(+58 files in other folders)
